# ChangeLog for app-admin/makepasswd
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/makepasswd/ChangeLog,v 1.15 2007/03/01 16:29:58 genstef Exp $

  01 Mar 2007; <genstef@gentoo.org> makepasswd-1.10.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  14 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove carpaski from metadata.xml due to retiring.

  15 Apr 2004; Michael McCabe <randy@gentoo.org> makepasswd-1.10.ebuild:
  adding s390 keywords

  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> makepasswd-1.10.ebuild:
  stable on alpha and ia64

  06 Dec 2003; <rac@gentoo.org> makepasswd-1.10.ebuild:
  keyword amd64

  20 Nov 2003; Tavis Ormandy <taviso@gentoo.org> makepasswd-1.10.ebuild:
  marked ~alpha

  05 Oct 2003; Chuck Short <zul@gentoo.org> makepasswd-1.10.ebuild:
  Added ~ia64 to keywords.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*makepasswd-1.10 (12 Jun 2002)

  29 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> makepasswd-1.10.ebuild :

  Added S=${WORKDIR}/${P}
  Added ppc to KEYWORDS.

  12 Jun 2002; N.Jones <carpaski@gentoo.org> makepasswd-1.10.ebuild:
    Initial ChangeLog. Ebuild submitted by Robert Coie <rac@intrigue.com>.
 