@@ -1,9 +1,9 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/makepasswd/makepasswd-1.10.ebuild,v 1.23 2007/03/01 16:29:58 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/makepasswd/makepasswd-1.10.ebuild,v 1.24 2008/03/27 16:11:44 armin76 Exp $
 
 DESCRIPTION="Random password generator"
-HOMEPAGE="http://packages.debian.org/stable/admin/makepasswd.html"
+HOMEPAGE="http://packages.debian.org/stable/admin/makepasswd"
 SRC_URI="mirror://debian/dists/potato/main/source/admin/${P/-/_}.orig.tar.gz"
 
 LICENSE="GPL-2"
