@@ -1,11 +1,11 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/realpath/realpath-1.9.16.ebuild,v 1.10 2007/11/28 15:33:38 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/realpath/realpath-1.9.16.ebuild,v 1.11 2008/03/27 16:12:54 armin76 Exp $
 
 inherit eutils toolchain-funcs
 
 DESCRIPTION="Return the canonicalized absolute pathname"
-HOMEPAGE="http://packages.debian.org/unstable/utils/realpath.html"
+HOMEPAGE="http://packages.debian.org/unstable/utils/realpath"
 SRC_URI="mirror://debian/pool/main/d/dwww/dwww_${PV}.tar.gz"
 
 LICENSE="GPL-2"
