@@ -1,11 +1,11 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/tmpreaper/tmpreaper-1.6.7.ebuild,v 1.1 2007/06/07 15:05:30 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/tmpreaper/tmpreaper-1.6.7.ebuild,v 1.2 2008/03/27 16:12:20 armin76 Exp $
 
 inherit eutils
 
 DESCRIPTION="A utility for removing files based on when they were last accessed"
-HOMEPAGE="http://packages.debian.org/stable/admin/tmpreaper.html"
+HOMEPAGE="http://packages.debian.org/stable/admin/tmpreaper"
 SRC_URI="mirror://debian/pool/main/t/${PN}/${PN}_${PV}.tar.gz"
 
 LICENSE="GPL-2"
