@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/tmpreaper
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/tmpreaper/ChangeLog,v 1.19 2008/03/22 10:13:13 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/tmpreaper/ChangeLog,v 1.20 2008/03/27 16:12:20 armin76 Exp $
+
+  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> tmpreaper-1.6.7.ebuild:
+  Fix debian HOMEPAGE
 
   22 Mar 2008; nixnut <nixnut@gentoo.org> tmpreaper-1.6.9.ebuild:
   Stable on ppc wrt bug 209100
