@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/makepasswd
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/makepasswd/ChangeLog,v 1.15 2007/03/01 16:29:58 genstef Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-admin/makepasswd/ChangeLog,v 1.16 2008/03/27 16:11:44 armin76 Exp $
+
+  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> makepasswd-1.10.ebuild:
+  Fix debian HOMEPAGE
 
   01 Mar 2007; <genstef@gentoo.org> makepasswd-1.10.ebuild:
   Dropped ppc-macos keyword, see you in prefix
